# uwsgi-nginx-flask-docker

./: .gitignore  .travis.yml  Pipfile  README.md  a.txt  deprecated-single-page-apps-in-same-container.md  docker-compose.build.stage01.yml  docker-compose.build.stage02.yml  docker-compose.build.yml  make-example-zips.sh  pyproject.toml  release-notes.md
.github/: dependabot.yml  labeler.yml
deprecated/: Dockerfile
deprecated-index/: Dockerfile  entrypoint.sh
docker-images/: entrypoint.sh  python2.7.dockerfile  python3.10.dockerfile  python3.11.dockerfile  python3.12.dockerfile  python3.6.dockerfile  python3.7.dockerfile  python3.8-alpine.dockerfile  python3.8-arm64.dockerfile  python3.8.dockerfile  python3.9-arm64.dockerfile  python3.9.dockerfile  requirements.txt
example-flask-index/: Dockerfile
example-flask-index-upload/: Dockerfile
example-flask-package-python3.6/: docker-compose.override.yml
example-flask-package-python3.7/: docker-compose.override.yml
example-flask-package-python3.8/: Dockerfile
example-flask-python3.5/: Dockerfile
example-flask-python3.5-index/: Dockerfile
example-flask-python3.5-index-upload/: Dockerfile
example-flask-python3.5-upload/: Dockerfile
example-flask-python3.6/: Dockerfile  docker-compose.override.yml  docker-compose.yml
example-flask-python3.6-index/: Dockerfile  docker-compose.override.yml
example-flask-python3.7/: Dockerfile  docker-compose.override.yml
example-flask-python3.7-index/: Dockerfile  docker-compose.override.yml  docker-compose.yml
example-flask-python3.8-index/: Dockerfile
(+158 files in other folders)
