[tool.poetry]
name = "uwsgi-nginx-flask-docker"
version = "0.1.0"
description = "Docker image with uWSGI and Nginx for Flask applications in Python running in a single container. Optionally with Alpine Linux."
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
docker = "^6.0.1"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
black = "^23.1"
isort = "^5.8.0"
autoflake = "^2.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
